--- a/src/css/conteudo-principal.css
+++ b/src/css/conteudo-principal.css
@@ -1,21 +1,24 @@
 body {
   width: 100vw;
+  max-width: 100%;
   min-height: 100vh;
   background: var(--cor-de-fundo);
   display: flex;
   justify-content: center;
   align-items: center;
+  /* overflow-x: hidden; */
 }
 
 .conteudo-principal {
   width: 375px;
+  max-width: 100%;
   background: var(--cor-do-conteudo-principal);
   border-radius: 0.438rem;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 header {
-  width: 375px;
+  max-width: 100%;
   height: 4.125rem;
   border-radius: 0.438rem 0.438rem 0 0;
   background: var(--cabecalho-cor);
